--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -135,8 +135,11 @@ jobs:  # 실행할 job 정의
           script: |
             cd /home/ubuntu/app/back/build/libs
             pm2 delete backend || true
-            export $(cat /home/ubuntu/app/back/.env | xargs)
-            pm2 start java --name backend -- -jar back-0.0.1-SNAPSHOT.jar
+            export $(cat /home/ubuntu/app/.env | xargs)
+            JAR=$(ls *.jar | grep -v plain | head -n 1)
+            echo "Running $JAR"
+            pm2 start java --name backend -- -jar $JAR
+            pm2 save
 
 
   frontend:
